Updating lots of viewer messages

--- a/client/app/viewer/viewer.html
+++ b/client/app/viewer/viewer.html
@@ -1,11 +1,13 @@
-<h4 class="page-header, text-center"> Search volunteers to view their schedule!</h4>
-<div class="form-group, volunteer-container">
-  <input type="search" ng-model="search.firstName" placeholder="filter volunteer by first name" aria-label="filter volunteer" class="filtering"/>
-  <input type="search" ng-model="search.lastName" placeholder="filter volunteer by last name" aria-label="filter volunteer" class="filtering" />
+<div class="viewer-container">
+  <div class="text-center">
+    <h4> Search volunteers to view their schedule!</h4>
+    <input type="search" ng-model="search.firstName" placeholder="filter volunteer by first name" aria-label="filter volunteer" class="filtering"/>
+    <input type="search" ng-model="search.lastName" placeholder="filter volunteer by last name" aria-label="filter volunteer" class="filtering" /><br/><br/>
+  </div>
   </div>
 <div class="panel panel-default volunteer-container">
-  <div class="panel-heading">List of all volunteers:
-  </div>
+  <div class="panel-heading">List of all volunteers:</div>
+  <div class="list-group-item" ng-hide="viewerCtrl.areThereVolunteers()">There are currently no entered volunteers.</div>
   <div class="list-group">
     <a ng-href="/viewer/{{volunteer._id}}" class="list-group-item" ng-repeat="volunteer in viewerCtrl.data | filter: search">
       {{ volunteer.firstName }} {{ volunteer.lastName }}
