--- a/client/app/volunteer/volunteer-detail.html
+++ b/client/app/volunteer/volunteer-detail.html
@@ -2,50 +2,52 @@
   <div class="panel panel-default">
     <div class="panel-heading">Volunteer Info:
     <div class="pull-right"><a href="/volunteers">Back to volunteer list</a></div></div>
-    {{ volunteerCtrl.volunteer.firstName }} {{ volunteerCtrl.volunteer.lastName }}
-    <br/>
-    <br/>Address:
-    <br/>{{ volunteerCtrl.volunteer.street1 }} {{ volunteerCtrl.volunteer.street2 }}
-    <br/>{{ volunteerCtrl.volunteer.city }}, {{ volunteerCtrl.volunteer.state }} {{ volunteerCtrl.volunteer.zip }}
-    <br/>
-    <br/>Country: {{ volunteerCtrl.volunteer.country }}
-    <br/>Region: {{ volunteerCtrl.volunteer.region }}
-    <br/>
-    <br/>Phone: {{ volunteerCtrl.volunteer.phone }}
-    <br/>Work Phone: {{ volunteerCtrl.volunteer.workPhone }}
-    <br/>Email: {{ volunteerCtrl.volunteer.email }}
-    <br/>Fax: {{ volunteerCtrl.volunteer.fax }}
-    <br/>
-    <br/>Association Experience: {{ volunteerCtrl.volunteer.assocExp }}
-    <br/>Coach Experience: {{ volunteerCtrl.volunteer.coachExp }}
-    <br/>Member Experience: {{ volunteerCtrl.volunteer.memberExp }}
-    <br/>
-    <br/>Username: {{ volunteerCtrl.volunteer.username }}
-    <br/>Password: {{ volunteerCtrl.volunteer.password }}
-    <br/>
-    <br/>Current Job: {{ volunteerCtrl.volunteer.current }}
-    <br/>Job Preference #1: {{ volunteerCtrl.volunteer.jobPreference1 }}
-    <br/>Job Preference #2: {{ volunteerCtrl.volunteer.jobPreference2 }}
-    <br/>
-    <br/>Membership Number: {{ volunteerCtrl.volunteer.membershipNumber }}
-    <br/>Problem: {{ volunteerCtrl.volunteer.problem }}
-    <br/>Division: {{ volunteerCtrl.volunteer.division }}
-    <br/>
-    <br/>Submit Date: {{ volunteerCtrl.volunteer.submitDate }}
-    <br/>Last Modified: {{ volunteerCtrl.volunteer.lastModified }}
-    <br/>
-    <br/>School Membership: {{ volunteerCtrl.volunteer.mName }}
-    <br/>Region Membership: {{ volunteerCtrl.volunteer.mRegion }}
-    <br/>Child's Team: {{ volunteerCtrl.volunteer.childTeam }}
-    <br/>
-    <br/>Coach: {{ volunteerCtrl.volunteer.coachName }} ({{ volunteerCtrl.volunteer.coachEmail }})
-    <br/>
-    <br/>T Shirt Size: {{ volunteerCtrl.volunteer.tshirtSize }}
-    <br/>
-    <br/>Position Held: {{ volunteerCtrl.volunteer.positionHeld }}
-    <br/>
-    <br/>Comment: {{ volunteerCtrl.volunteer.comment }}
-    <br/>
-    <br/>Are they a judge? {{ volunteerCtrl.volunteer.isJudge }}
+    <div class="panel-body">
+      {{ volunteerCtrl.volunteer.firstName }} {{ volunteerCtrl.volunteer.lastName }}
+      <br/>
+      <br/>Address:
+      <br/>{{ volunteerCtrl.volunteer.street1 }} {{ volunteerCtrl.volunteer.street2 }}
+      <br/>{{ volunteerCtrl.volunteer.city }}, {{ volunteerCtrl.volunteer.state }} {{ volunteerCtrl.volunteer.zip }}
+      <br/>
+      <br/>Country: {{ volunteerCtrl.volunteer.country }}
+      <br/>Region: {{ volunteerCtrl.volunteer.region }}
+      <br/>
+      <br/>Phone: {{ volunteerCtrl.volunteer.phone }}
+      <br/>Work Phone: {{ volunteerCtrl.volunteer.workPhone }}
+      <br/>Email: {{ volunteerCtrl.volunteer.email }}
+      <br/>Fax: {{ volunteerCtrl.volunteer.fax }}
+      <br/>
+      <br/>Association Experience: {{ volunteerCtrl.volunteer.assocExp }}
+      <br/>Coach Experience: {{ volunteerCtrl.volunteer.coachExp }}
+      <br/>Member Experience: {{ volunteerCtrl.volunteer.memberExp }}
+      <br/>
+      <br/>Username: {{ volunteerCtrl.volunteer.username }}
+      <br/>Password: {{ volunteerCtrl.volunteer.password }}
+      <br/>
+      <br/>Current Job: {{ volunteerCtrl.volunteer.current }}
+      <br/>Job Preference #1: {{ volunteerCtrl.volunteer.jobPreference1 }}
+      <br/>Job Preference #2: {{ volunteerCtrl.volunteer.jobPreference2 }}
+      <br/>
+      <br/>Membership Number: {{ volunteerCtrl.volunteer.membershipNumber }}
+      <br/>Problem: {{ volunteerCtrl.volunteer.problem }}
+      <br/>Division: {{ volunteerCtrl.volunteer.division }}
+      <br/>
+      <br/>Submit Date: {{ volunteerCtrl.volunteer.submitDate }}
+      <br/>Last Modified: {{ volunteerCtrl.volunteer.lastModified }}
+      <br/>
+      <br/>School Membership: {{ volunteerCtrl.volunteer.mName }}
+      <br/>Region Membership: {{ volunteerCtrl.volunteer.mRegion }}
+      <br/>Child's Team: {{ volunteerCtrl.volunteer.childTeam }}
+      <br/>
+      <br/>Coach: {{ volunteerCtrl.volunteer.coachName }} ({{ volunteerCtrl.volunteer.coachEmail }})
+      <br/>
+      <br/>T Shirt Size: {{ volunteerCtrl.volunteer.tshirtSize }}
+      <br/>
+      <br/>Position Held: {{ volunteerCtrl.volunteer.positionHeld }}
+      <br/>
+      <br/>Comment: {{ volunteerCtrl.volunteer.comment }}
+      <br/>
+      <br/>Are they a judge? {{ volunteerCtrl.volunteer.isJudge }}
+    </div>
   </div>
 </div>
