--- a/client/app/viewer/viewer-detail.html
+++ b/client/app/viewer/viewer-detail.html
@@ -3,10 +3,11 @@
     <div class="panel-heading">Volunteer Schedule: {{ viewerCtrl.volunteer.firstName }} {{ viewerCtrl.volunteer.lastName }}
       <div class="pull-right"><a href="/viewer">Back to volunteer list</a></div></div>
     <div class="panel-body">
+      <div ng-hide="viewerCtrl.areThereSlots()">There are currently no assigned jobs for this volunteer.</div>
       <div ng-repeat="slot in viewerCtrl.slots">
         <strong>Job title</strong>: {{ viewerCtrl.getJobTitle(slot.jobID) }} <br />
         <strong>Start time</strong>: {{ slot.start }} <br />
-        <strong>End time</strong>: {{ slot.end }} <br />
+        <strong>End time</strong>: {{ slot.end }} <br /><br />
       </div>
     </div>
 
