--- a/client/app/slot/slot.html
+++ b/client/app/slot/slot.html
@@ -6,8 +6,8 @@
     <div class="list-group-item" ng-hide="slotCtrl.areThereSlots()">There are currently no time slots entered.</div>
     <a ng-href="/slots/{{slot._id}}" class="list-group-item" ng-repeat="slot in slotCtrl.data">
       <strong>Job title</strong>: {{ slotCtrl.getJobTitle(slot.jobID) }} <br />
-      <strong>Start time</strong>: {{ slot.start }} <br />
-      <strong>End time</strong>: {{ slot.end }} <br />
+      <strong>Start time</strong>: {{ slotCtrl.parseTime(slot.start) }} <br />
+      <strong>End time</strong>: {{ slotCtrl.parseTime(slot.end) }} <br />
       <strong>Volunteers needed</strong>: {{ slot.volunteersNeeded }} <br />
 
     </a>
