--- a/client/app/viewer/viewer-detail.html
+++ b/client/app/viewer/viewer-detail.html
@@ -6,8 +6,8 @@
       <div ng-hide="viewerCtrl.areThereSlots()">There are currently no assigned jobs for this volunteer.</div>
       <div ng-repeat="slot in viewerCtrl.slots">
         <strong>Job title</strong>: {{ viewerCtrl.getJobTitle(slot.jobID) }} <br />
-        <strong>Start time</strong>: {{ slot.start }} <br />
-        <strong>End time</strong>: {{ slot.end }} <br /><br />
+        <strong>Start time</strong>: {{ viewerCtrl.parseTime(slot.start) }} <br />
+        <strong>End time</strong>: {{ viewerCtrl.parseTime(slot.end) }} <br /><br />
       </div>
     </div>
 
