--- a/client/app/job/job.html
+++ b/client/app/job/job.html
@@ -3,10 +3,10 @@
     <div class="pull-right"><a href="/jobs/create">Add a job</a></div>
   </div>
   <div class="list-group">
-    <span class="list-group-item" ng-hide="jobCtrl.areThereJobs()">There are currently no jobs.</span>
     <a ng-href="" class="list-group-item" ng-repeat="job in jobCtrl.data">
       <strong>Job title</strong>: {{ job.title }} <br />
       <strong>Description</strong>: {{ job.description }}
     </a>
+    <div class="panel-body" ng-hide="jobCtrl.areThereJobs()">There are currently no jobs.</div>
   </div>
 </div>
