--- a/client/app/volunteer/volunteer-create.html
+++ b/client/app/volunteer/volunteer-create.html
@@ -1,12 +1,13 @@
 <div class="panel panel-default job-container">
-  <div class="panel-heading">Create a volunteer:</div>
+  <div class="panel-heading">Create a volunteer:
+    <br/>Required information<label class= "control-label">*</label></div>
   <div class="panel-body">
 <div class="form-group">
-  <label for="firstName">First Name:</label>
+  <label for="firstName">First Name:</label><label class= "control-label">*</label>
   <input type="text" class="form-control" id="firstName" align="right" ng-model="volunteerCtrl.firstName">
 </div>
 <div class="form-group">
-  <label for="lastName">Last Name:</label>
+  <label for="lastName">Last Name:</label><label class= "control-label">*</label>
   <input type="text" class="form-control" id="lastName" ng-model="volunteerCtrl.lastName">
 </div>
 <div class="form-group">
@@ -91,7 +92,7 @@
 </div>
 <div class="form-group">
   <label for="membershipNumber">Membership Number:</label>
-  <input type="number" class="form-control" id="membershipNumber" ng-model="volunteerCtrl.membershipNumber">
+  <input class="form-control" id="membershipNumber" ng-model="volunteerCtrl.membershipNumber">
 </div>
 <div class="form-group">
   <label for="problem">Problem:</label>
@@ -144,5 +145,5 @@
 <div class="checkbox">
   <label><input type="checkbox" value="" ng-model="volunteerCtrl.isJudge">Are they a judge?</label>
 </div>
-<button type="submit" ng-click="volunteerCtrl.addVolunteer()" name="submit">Submit</button>
+<button type="submit" onclick="return confirm('Are you sure you want to submit?')" ng-click="volunteerCtrl.addVolunteer()" name="submit">Submit</button>
 </div></div>
