Adding job detail view

--- a/client/app/slot/slot-detail.html
+++ b/client/app/slot/slot-detail.html
@@ -1,4 +1,4 @@
-<div class="volunteer-container">
+<div class="slot-container">
   <div class="panel panel-default">
     <div class="panel-heading">Slot Info:
       <div class="pull-right"><a href="/slots">Back to slot list</a></div>
