--- a/client/app/job/job.html
+++ b/client/app/job/job.html
@@ -1,9 +1,9 @@
-<div class="panel panel-default volunteer-container">
+<div class="panel panel-default job-container">
   <div class="panel-heading">List of all jobs:
     <div class="pull-right"><a href="/jobs/create">Add a job</a></div>
   </div>
   <div class="list-group">
-    <a ng-href="" class="list-group-item" ng-repeat="job in jobCtrl.data">
+    <a ng-href="/jobs/{{job._id}}" class="list-group-item" ng-repeat="job in jobCtrl.data">
       <strong>Job title</strong>: {{ job.title }} <br />
       <strong>Description</strong>: {{ job.description }}
     </a>
