--- a/client/app/slot/slot-detail.html
+++ b/client/app/slot/slot-detail.html
@@ -5,8 +5,8 @@
     </div>
     <div class="panel-body">
       <strong>Job title</strong>: {{ slotCtrl.getJobTitle(slotCtrl.slot.jobID) }} <br />
-      <strong>Start time</strong>: {{ slotCtrl.slot.start }} <br />
-      <strong>End time</strong>: {{ slotCtrl.slot.end }} <br />
+      <strong>Start time</strong>: {{ slotCtrl.parseTime(slotCtrl.slot.start) }} <br />
+      <strong>End time</strong>: {{ slotCtrl.parseTime(slotCtrl.slot.end) }} <br />
       <strong>Volunteers needed</strong>: {{ slotCtrl.slot.volunteersNeeded }} <br />
     </div>
   </div>
