--- a/client/app/volunteer/volunteer-create.html
+++ b/client/app/volunteer/volunteer-create.html
@@ -145,5 +145,5 @@
 <div class="checkbox">
   <label><input type="checkbox" value="" ng-model="volunteerCtrl.isJudge">Are they a judge?</label>
 </div>
-<button type="submit" onclick="return confirm('Are you sure you want to submit?')" ng-click="volunteerCtrl.addVolunteer()" name="submit">Submit</button>
+<button type="submit" ng-click="volunteerCtrl.addVolunteer()" name="submit">Submit</button>
 </div></div>
