Fixing alphabetical ordering of volunteers

--- a/client/app/viewer/viewer.html
+++ b/client/app/viewer/viewer.html
@@ -8,7 +8,7 @@
 <div class="panel panel-default viewer-container">
   <div class="panel-heading">List of all volunteers:</div>
   <div class="list-group">
-    <a ng-href="/view/{{volunteer._id}}" class="list-group-item" ng-repeat="volunteer in viewerCtrl.data | filter: search | orderBy: volunteer.lastName">
+    <a ng-href="/view/{{volunteer._id}}" class="list-group-item" ng-repeat="volunteer in viewerCtrl.data | filter: search | orderBy: 'lastName'">
       {{ volunteer.firstName }} {{ volunteer.lastName }}
     </a>
     <div class="list-group-item" ng-hide="viewerCtrl.areThereVolunteers()">There are currently no entered volunteers.</div>
