Editing volunteer data

--- a/client/app/job/job-create.html
+++ b/client/app/job/job-create.html
@@ -2,8 +2,8 @@
   <div class="panel-heading">Create a job:</div>
   <div class="panel-body">
     Create a job here. These are jobs that will later be used to create time slots for the schedule. <br /><br />
-    <div ng-show="jobCtrl.isSuccess()">You have successfully created a new job.<br /><br /></div>
-    <div ng-show="jobCtrl.isError()">You must fill out all of the required fields.<br /><br /></div>
+    <div class="success" ng-show="jobCtrl.isSuccess()">You have successfully created a new job.<br /><br /></div>
+    <div class="warning" ng-show="jobCtrl.isError()">You must fill out all of the required fields.<br /><br /></div>
     <form>
       <div class="form-group">
         <label for="jobtitle">Job Title</label>
