--- a/client/app/slot/slot-create.html
+++ b/client/app/slot/slot-create.html
@@ -5,8 +5,8 @@
   </div>
   <div class="panel-body" ng-show="slotCtrl.canCreate()">
     Create a time slot here. You can assign a job to this time slot and how many volunteers are needed for this.<br /><br />
-    <div ng-show="slotCtrl.isSuccess()">You have successfully entered a time slot.<br /><br /></div>
-    <div ng-show="slotCtrl.isError()">You must fill out all of the required fields.<br /><br /></div>
+    <div class="success" ng-show="slotCtrl.isSuccess()">You have successfully entered a time slot.<br /><br /></div>
+    <div class="warning" ng-show="slotCtrl.isError()">You must fill out all of the required fields.<br /><br /></div>
     <form>
       <div class="form-group">
         <label for="jobtitle">Job Title</label><br />
@@ -108,7 +108,7 @@
       </div>
       <div class="form-group">
         <label for="volunteersNeeded">Volunteers Needed</label>
-        <input type="number" name="volunteersNeeded" id="volunteersNeeded" ng-model="slotCtrl.volunteersNeeded" min="1" max="100" required>
+        <input type="number" name="volunteersNeeded" id="volunteersNeeded" ng-model="slotCtrl.volunteersNeeded" min="1" max="100">
       </div>
       <button type="submit" ng-click="slotCtrl.createSlot()" class="btn btn-default">Submit</button>
     </form>
