--- a/client/app/volunteer/volunteer-detail.html
+++ b/client/app/volunteer/volunteer-detail.html
@@ -251,6 +251,20 @@
 <br /><br />
 
 <div class="panel panel-default volunteer-create-container">
+  <div class="panel-heading">Assigned jobs:</div>
+  <div class="list-group">
+    <div class="list-group-item" ng-repeat="slot in volunteerCtrl.slots">
+      <strong>Job title</strong>: {{ volunteerCtrl.getJobTitle(slot.jobID) }} <br />
+      <strong>Start time</strong>: {{ volunteerCtrl.parseTime(slot.start) }} <br />
+      <strong>End time</strong>: {{ volunteerCtrl.parseTime(slot.end) }} <br />
+    </div>
+    <div ng-hide="volunteerCtrl.areThereSlots()">There are currently no assigned jobs for this volunteer.</div>
+  </div>
+</div>
+
+<br /><br />
+
+<div class="panel panel-default volunteer-create-container">
   <div class="panel-heading">Administrative Information:</div>
   <div class="panel-body">
     <form class="form-horizontal">
