--- a/client/app/volunteer/volunteer.html
+++ b/client/app/volunteer/volunteer.html
@@ -9,17 +9,19 @@
   <div class="panel-heading">List of all volunteers:
     <div class="pull-right"><a href="/volunteers/create">Add a volunteer</a></div>
   </div>
-  <div>
     <div ng-repeat="volunteer in volunteerCtrl.data | filter: search | orderBy: 'lastName'">
       <div class="btn-group btn-group-justified">
          <a ng-href="/volunteers/{{volunteer._id}}" class="btn btn-default"> {{ volunteer.firstName }} {{ volunteer.lastName }} </a>
 
-         <div class="btn btn-default"> Remove <div>
+        <div class="btn-group" role="group">
+         <button type="button" class="btn btn-default" aria-label="Left Align">
+           <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+         </button>
+        </div>
 
          </div>
-
     </div>
-    <button class="btn btn-primary" ng-hide="volunteerCtrl.areThereVolunteers()">There are currently no entered volunteers.</button>
+    <button class="btn btn-default" ng-hide="volunteerCtrl.areThereVolunteers()">There are currently no entered volunteers.</button>
   </div>
 </div>
 
