--- a/client/app/viewer/viewer-detail.html
+++ b/client/app/viewer/viewer-detail.html
@@ -9,7 +9,7 @@
         <strong>Start time</strong>: {{ viewerCtrl.parseTime(slot.start) }} <br />
         <strong>End time</strong>: {{ viewerCtrl.parseTime(slot.end) }} <br />
       </div>
-      <div ng-hide="viewerCtrl.areThereSlots()">There are currently no assigned jobs for this volunteer.</div>
+      <div class="panel-body" ng-hide="viewerCtrl.areThereSlots()">There are currently no assigned jobs for this volunteer.</div>
     </div>
   </div>
 </div>
