--- a/client/app/slot/slot.html
+++ b/client/app/slot/slot.html
@@ -9,6 +9,6 @@
       <strong>End time</strong>: {{ slotCtrl.parseTime(slot.end) }} <br />
       <strong>Volunteers needed</strong>: {{ slot.volunteersNeeded }} <br />
     </a>
-    <div class="list-group-item" ng-hide="slotCtrl.areThereSlots()">There are currently no time slots entered.</div>
+    <div class="panel-body" ng-hide="slotCtrl.areThereSlots()">There are currently no time slots entered.</div>
   </div>
 </div>
