--- a/client/app/job/job.html
+++ b/client/app/job/job.html
@@ -3,10 +3,13 @@
     <div class="pull-right"><a href="/jobs/create">Add a job</a></div>
   </div>
   <div class="list-group">
-    <a ng-href="/jobs/{{job._id}}" class="list-group-item" ng-repeat="job in jobCtrl.data">
-      <strong>Job title</strong>: {{ job.title }} <br />
-      <strong>Description</strong>: {{ job.description }}
-    </a>
-    <div class="panel-body" ng-hide="jobCtrl.areThereJobs()">There are currently no jobs.</div>
+    <div class="list-group-item no-padding" style="" ng-repeat="job in jobCtrl.data">
+      <a ng-href="/jobs/{{job._id}}" class="group-item">
+        <strong>Job title</strong>: {{ job.title }} <br />
+        <strong>Description</strong>: {{ job.description }}
+      </a>
+      <a ng-click="jobCtrl.removeJob(job)" ng-href="" class="btn btn-sm btn-danger group-item-remove" style=""><span class="glyphicon glyphicon-trash"></span></a>
+    </div>
   </div>
+  <div class="panel-body" ng-hide="jobCtrl.areThereJobs()">There are currently no jobs.</div>
 </div>
