--- a/client/app/slot/slot.html
+++ b/client/app/slot/slot.html
@@ -3,12 +3,18 @@
     <div class="pull-right"><a href="/slots/create">Add a time slot</a></div>
   </div>
   <div class="list-group">
-    <a ng-href="/slots/{{slot._id}}" class="list-group-item" ng-repeat="slot in slotCtrl.data">
-      <strong>Job title</strong>: {{ slotCtrl.getJobTitle(slot.jobID) }} <br />
-      <strong>Start time</strong>: {{ slotCtrl.parseTime(slot.start) }} <br />
-      <strong>End time</strong>: {{ slotCtrl.parseTime(slot.end) }} <br />
-      <strong>Volunteers needed</strong>: {{ slot.volunteersNeeded }} <br />
-    </a>
-    <div class="panel-body" ng-hide="slotCtrl.areThereSlots()">There are currently no time slots entered.</div>
+    <div class="list-group-item no-padding" ng-repeat="slot in slotCtrl.data">
+      <a ng-href="/slots/{{slot._id}}" class="group-item">
+        <strong>Job title</strong>: {{ slotCtrl.getJobTitle(slot.jobID) }} <br />
+        <strong>Start time</strong>: {{ slotCtrl.parseTime(slot.start) }} <br />
+        <strong>End time</strong>: {{ slotCtrl.parseTime(slot.end) }} <br />
+        <strong>Volunteers needed</strong>: {{ slot.volunteersNeeded }} <br />
+      </a>
+      <a ng-click="slotCtrl.removeSlot(slot)" ng-href="" class="btn btn-sm btn-danger group-item-remove"><span class="glyphicon glyphicon-trash"></span></a>
+    </div>
   </div>
+  <div class="panel-body" ng-hide="slotCtrl.areThereSlots()">There are currently no time slots.</div>
 </div>
+
+
+
