--- a/client/app/volunteer/volunteer-detail.html
+++ b/client/app/volunteer/volunteer-detail.html
@@ -258,7 +258,7 @@
       <strong>Start time</strong>: {{ volunteerCtrl.parseTime(slot.start) }} <br />
       <strong>End time</strong>: {{ volunteerCtrl.parseTime(slot.end) }} <br />
     </div>
-    <div ng-hide="volunteerCtrl.areThereSlots()">There are currently no assigned jobs for this volunteer.</div>
+    <div class="panel-body" ng-hide="volunteerCtrl.areThereSlots()">There are currently no assigned jobs for this volunteer.</div>
   </div>
 </div>
 
