--- a/client/app/volunteer/volunteer.html
+++ b/client/app/volunteer/volunteer.html
@@ -15,5 +15,5 @@
       <a ng-click="volunteerCtrl.removeVolunteer(volunteer)" ng-href="" class="btn btn-sm btn-danger group-item-remove"><span class="glyphicon glyphicon-trash"></span></a>
     </div>
   </div>
-  <div class="list-group-item" ng-hide="volunteerCtrl.areThereVolunteers()">There are currently no entered volunteers.</div>
+  <div class="panel-body" ng-hide="volunteerCtrl.areThereVolunteers()">There are currently no entered volunteers.</div>
   </div>
