--- a/client/app/job/job-detail.html
+++ b/client/app/job/job-detail.html
@@ -14,12 +14,16 @@
       <div class="pull-right"><a href="/slots/create">Create a time slot</a></div>
     </div>
     <div class="list-group">
-      <a ng-href="/slots/{{slot._id}}" class="list-group-item" ng-repeat="slot in jobCtrl.slots">
-        <strong>Start time</strong>: {{ jobCtrl.parseTime(slot.start) }} <br />
-        <strong>End time</strong>: {{ jobCtrl.parseTime(slot.end) }} <br />
-        <strong>Volunteers needed</strong>: {{ slot.volunteersNeeded }} <br />
-      </a>
-      <div class="panel-body" ng-hide="jobCtrl.areThereSlotsHere()">There are currently no time slots created for this job.</div>
+      <div class="list-group-item no-padding" ng-repeat="slot in jobCtrl.slots">
+        <a ng-href="/slots/{{slot._id}}" class="group-item">
+          <strong>Start time</strong>: {{ jobCtrl.parseTime(slot.start) }} <br />
+          <strong>End time</strong>: {{ jobCtrl.parseTime(slot.end) }} <br />
+          <strong>Volunteers needed</strong>: {{ slot.volunteersNeeded }} <br />
+        </a>
+        <a ng-click="jobCtrl.removeSlot(slot)" ng-href="" class="btn btn-sm btn-danger group-item-remove"><span class="glyphicon glyphicon-trash"></span></a>
+      </div>
     </div>
+    <div class="panel-body" ng-hide="jobCtrl.areThereSlotsHere()">There are currently no time slots created for this job.</div>
   </div>
 </div>
+
